--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
-    "dev": "babel src -d dist -x .js -w"
+    "dev": "babel src -d dist -x .js -w",
+    "test": "jest"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -25,6 +26,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.0.0",
+    "jest": "^23.6.0",
     "prettier": "^1.15.3"
   }
 }
